--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       var filter = "win16|win32|win64|mac";
       if(navigator.platform){
         if(0 > filter.indexOf(navigator.platform.toLowerCase())) {
-          location.href = "https://festival2018.herokuapp.com/sorry_pc" ;
+          location.href = "https://festival2018.herokuapp.com/sorry_pc.html" ;
         }
       }
       
