change filter list

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
 
     function initialize() {
-      var filter = "win16|win32|win64|mac";
+      var filter = "win16|win32|win64|mac|MacIntel";
       if(navigator.platform){
         if(0 < filter.indexOf(navigator.platform.toLowerCase())) {
           location.href = "https://festival2018.herokuapp.com/sorry_pc.html" ;
