--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     function initialize() {
       var filter = "win16|win32|win64|mac|macintel";
       if( navigator.platform  ){
-              if( filter.indexOf(navigator.platform.toLowerCase())>0 ){
+              if( filter.indexOf(navigator.platform.toLowerCase())<0 ){
                   location.href = "https://festival2018.herokuapp.com/sorry_pc.html";
               }
       } 
