--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfbFv9IAXMH3ym7cTHQJ0MXWxq5BiQ1qU" type="text/javascript"></script>
   
   
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     function initialize() {
       var filter = "win16|win32|win64|mac|macintel";
       if( navigator.platform  ){
@@ -53,8 +53,9 @@
               }
       } 
     }
-  </script>
-  
+  </script> -->
+
+
   <script type="text/javascript">
 
     function initialize() {
