--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       var filter = "win16|win32|win64|mac|macintel";
       if( navigator.platform  ){
               if( filter.indexOf(navigator.platform.toLowerCase())>0 ){
-                  location.href = "http://m.naver.com";
+                  location.href = "https://festival2018.herokuapp.com/sorry_pc.html";
               }
       }
       
