--- a/booth6.html
+++ b/booth6.html
@@ -85,7 +85,7 @@
    var filter = "win16|win32|win64|mac";
       if(navigator.platform){
         if(0 < filter.indexOf(navigator.platform.toLowerCase())) {
-          location.href = "http://festival.hufsglobal.info/sorry_pc" ;
+          location.href = "https://festival2018.herokuapp.com/sorry_pc" ;
         }
       }
 </script>
