change file name way1

--- a/sorry.html
+++ b/sorry.html
@@ -51,10 +51,10 @@
               <li><a href="booth6.html">공대 & 자대</a></li>
             </ul>
           </li>
-          <li><a href="performance.html">공연</a></li>
-          <li><a href="way.html">오시는 길</a></li>
+          <li><a href="performance1.html">공연</a></li>
+          <li><a href="way1.html">오시는 길</a></li>
           <li><a href="https://www.facebook.com/groups/963234953762921/">분실물</a></li>
-          <li><a href="info.html">사이트정보</a></li>
+          <li><a href="info1.html">사이트정보</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
